--- a/index.qmd
+++ b/index.qmd
@@ -58,7 +58,7 @@ execute:
 
 Welcome to my website — I'm glad you're here!
 
-I hold a doctoral degree in Global Health from [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), building upon an academic foundation in health and sustainability science with a focus on One Health/Global Health (MSc). My research interests span epidemiology, health, and sustainability, with a primary emphasis on methodology, applied and implementation research.
+I am a postdoctoral researcher at Stockholm Resilience Center, Stockholm University. I hold a doctoral degree in Global Health from [Uppsala University](https://www.uu.se/en/contact-and-organisation/staff?query=N21-1055), building upon an academic foundation in health and sustainability science with a focus on One Health/Global Health (MSc). My research interests span epidemiology, health, and sustainability, with a primary emphasis on methodology, applied and implementation research.
 
 ::: {.column-margin}
 ::: {data-iframe-width="300" data-iframe-height="270" data-share-badge-id="4adacd93-99ef-4744-b21a-84b9bbe740a1" data-share-badge-host="https://www.credly.com"}
@@ -78,7 +78,7 @@ I hold a doctoral degree in Global Health from [Uppsala University](https://www.
 :::
 
 
-Beyond academia, I am `passionate about programming`, especially in R and Python, with experience building packages, dashboards, Shiny apps, and working with Large Language Models. My technical skills also extend to foundational knowledge of SQL, HTML, CSS, and JavaScript. I am a strong advocater of `open science and reproducible research`, always looking for ways to streamline workflow. Recently, I’ve been diving deeper into environmental epidemiology, clinical trials and data engineering.
+Beyond academia, I am `passionate about programming`, especially in R and Python, with experience building packages, dashboards, Shiny apps, and working with NLPs/LLMs. My technical skills also extend to foundational knowledge of SQL, HTML, CSS, and JavaScript. I am a strong advocater of `open science and reproducible research`, always looking for ways to streamline workflow. Recently, I’ve been diving deeper into environmental epidemiology, clinical trials and data engineering.
 
 ![](assets/img/extensions.png){fig-align="center"}
 
